--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LocBook</string>
+    <string name="error_loading_data">Error loading data</string>
 </resources>
