--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">LocBook</string>
     <string name="error_loading_data">Error loading data</string>
+    <string name="title_location_permission">Allow location permission</string>
+    <string name="text_location_permission">This app needs location permission to display places near you.</string>
+    <string name="ok">ok</string>
+    <string name="default_place_type">point of interest</string>
+    <string name="default_place_rating">None</string>
 </resources>
