--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="ok">ok</string>
     <string name="default_place_type">point of interest</string>
     <string name="default_place_rating">None</string>
+    <string name="place_type_label">Type:</string>
+    <string name="place_rating_label">Rating:</string>
 </resources>
