--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,10 @@
     <string name="place_rating_label">Rating:</string>
     <string name="mark_favorite">Mark as Favorite</string>
     <string name="un_mark_favorite">Remove from Favorites</string>
-    <string name="add_widget">Add widget</string>
+    <string name="add_widget">Add to widget</string>
     <string name="widget_added_text">Place added to widget!</string>
     <string name="widget_not_added_text">Some problem occurred. Try again.</string>
+    <string name="action_options">Options</string>
+    <string name="action_nearby">Nearby Places</string>
+    <string name="action_favorites">Favorites</string>
 </resources>
